feature(UI): User can delete a property advert [finish 166853220]

--- a/UI/pages/userpanel.html
+++ b/UI/pages/userpanel.html
@@ -14,7 +14,7 @@
 	<header class="mainheader">
 			<nav>
             <ul>
-                <li> <a href="/index.html">Home</a></li>
+                <li> <a href="../index.html">Home</a></li>
                 <li> <a href="../pages/contact.html">Contact Us</a></li>
                 <li> <a href="../pages/addhouse.html">Add Advert</a></li>
                 			
