chore(UI):user can view all the properties [finish 167122391]

--- a/UI/pages/details.html
+++ b/UI/pages/details.html
@@ -14,7 +14,7 @@
 	<header class="mainheader">
 			<nav>
             <ul>
-                <li> <a href="/index.html">Home</a></li>
+                <li> <a href="../index.html">Home</a></li>
 
                 <li> <a href="../pages/contact.html">Contact Us</a></li>
                 <li> <a href="../pages/create.html">register</a></li>
@@ -30,13 +30,13 @@
   <div class="product">
 
         <div class="img-container">
-         <img id="imageBox" src="../assets/images/house13.jpg">
+         <img id="imageBox" src="../assets/images/house4.jpg">
         </div>
 
      
 
 	  <div class="product-small-img">
-      <img src="../assets/images/house13.jpg" onclick="myFunction(this)">
+      <img src="../assets/images/house4.jpg" onclick="myFunction(this)">
       <img src="../assets/images/img-2.jpeg" onclick="myFunction(this)">
       <img src="../assets/images/img-3.jpeg" onclick="myFunction(this)">
       <img src="../assets/images/img-4.jpeg" onclick="myFunction(this)">
@@ -48,6 +48,7 @@
 
 <div class="containerb">
     <img src="../assets/images/agent.JPG">
+
     <div class="containerinfo">
         <h3>AGENT INFO</h3>
         <p>NAME:KALISA CLAUDE</p>
