--- a/UI/pages/userpanel.html
+++ b/UI/pages/userpanel.html
@@ -38,7 +38,7 @@
 
         <div class="profile"><img src="../assets/images/adm.JPG">
 
-          <button> <a href="/index.html">Log out</a></button>
+          <button> <a href="../index.html">Log out</a></button>
         </div>
         
         <div class="dashboard">
