--- a/UI/pages/addhouse.html
+++ b/UI/pages/addhouse.html
@@ -15,10 +15,10 @@
     
 		<nav>
             <ul>
-                    <li> <a href="/index.html">Home</a></li>
+                <li> <a href="../index.html">Home</a></li>
                     <li> <a href="../pages/contact.html">Contact Us</a></li>
                     <li> <a href="../pages/userpanel.html">My Dashboard</a></li>
-                    <li> <a href="/index.html">logout</a></li>					
+                    <li> <a href="../index.html">logout</a></li>					
             </ul>
         </nav>
         </header>
