--- a/UI/pages/create.html
+++ b/UI/pages/create.html
@@ -15,7 +15,7 @@
 		<nav>
             <ul>
 			
-              <li> <a href="/index.html">Home</a></li>
+              <li> <a href="../index.html">Home</a></li>
               <li> <a href="../pages/contact.html">Contact Us</a></li>
               <li> <a href="../pages/create.html">register</a></li>
               <li> <a href="../pages/login.html">login</a></li>				
